Fix bg image jumps on mobile scroll v2.3

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -696,9 +696,6 @@ th {
 
 /* Responsive styles for blog section */
 @media only screen and (max-width: 768px) {
-  .body-bg {
-    background-attachment: fixed;
-  }
   .blog-posts {
     display: grid;
     grid-template-columns: 1fr;
